--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactjs-popup": "^2.0.5",
+    "subscriptions-transport-ws": "^0.9.19",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
