--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "graphql": "^15.5.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactjs-popup": "^2.0.5",
